# statacons

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pystata_notes.md  stata.toc  statacons.pkg  tox.ini
docs/: .buildinfo.bak  .gitignore  api.html  api.rst  appendices.html  appendix-A-OtherAdvanced.html  appendix-B-CollaborativeWorkflows.html  appendix-C-CompilingPDF.html  complete_datasignature.html  conf.py  genindex.html  index.html  installation.html  introduction.html  metadata.html  objects.inv  parameters-Solution.html  parameters-isles.html  parameters.html  py-modindex.html  search.html  searchindex.js  separation.html  setup.html  simpleSConstruct.html  solution_2newrules.html  statacons.html  stataconsign.html  stataconsign.md  swc.html  variables.html
docsrc/: Makefile  appendices.rst  appendix-A-OtherAdvanced.md  appendix-B-CollaborativeWorkflows.md  appendix-C-CompilingPDF.md  conf.py  index.rst  installation.md  make.bat  metadata.md  parameters-Solution.md  parameters.md  separation.md  setup.md  simpleSConstruct.md  solution_2newrules.md  statacons.md  swc.rst  variables.md
examples/: BGD-San-Soc-statacons.7z
misc/: .env.template
pypkg/: .gitignore  README.md  setup.cfg
pypkg/src/pystatacons/: __init__.py  configuration.py  deciders.py  special_sigs.py  stata_utils.py
src/: .gitignore  SConstruct  buildHelpFiles.do  complete_datasignature.ado  complete_datasignature.md  complete_datasignature.sthlp  config_project.ini  runscons.py  sconsign-script.py  sconstruct_fns.py  set_python_exec_env.ado  statacons.ado  statacons.md  (+5 more)
(+138 files in other folders)
