[metadata]
name = pystatacons
version = 3.0.1
author = Statacons team
author_email = Brian.Quistorff@bea.gov
description = statacons Python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bquistorff/statacons

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
include_package_data = True
install_requires =
    scons

[options.packages.find]
where = src

[options.package_data]
* = py.typed
